# xlsdata

./: .gitignore  README.md  Taskfile.yml  flake.nix  pyproject.toml  u8r.qmd
xlpr-og/: __main__.py
