[tool.poetry]
name = "xlpr-og"
version = "0.1.0"
description = ""
authors = ["Matt Ji <matt@bountystash.com>"]
# readme = "README.md"
# license = "BSD"
packages = [
  { include = "xlpr-og" }
]

[tool.poetry.dependencies]
python = "^3.10"
# pandas = "^2.3.0"
# pyxlsb = "^1.0.10"
pandas = "^2.3.0"
pyxlsb = "^1.0.10"
pyxlsb2 = "^0.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
